--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==3.2.3
 django-bootstrap3==15.0.0
+django-bootstrap4==3.0.1
+django-bootstrap5==2.0.0
 django-config==0.1.4
 django-filter==2.4.0
 django-gunicorn==0.1.1
